--- a/less/home-page.less
+++ b/less/home-page.less
@@ -19,11 +19,21 @@
     flex-wrap: wrap;
     width: 100%;
 
+    @media @mobile {
+      .sky, .launch {
+      display: none;
+      }
+    }
+
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+
+      @media @mobile {
+        width: 100%;
+      }
     }
   }
 
@@ -46,8 +56,18 @@
     display: flex;
     justify-content: center;
 
+    @media @mobile {
+      flex-direction: column-reverse;
+      padding: 1rem 15px;
+    }
+
     .walk-text {
       width: 50%;
+
+      @media @mobile {
+        width: 100%;
+        margin-top: 1rem;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -58,12 +78,29 @@
       }
 
       .btn {
+        background-color: @btn-bg-color;
+        color: white;
+        font-size: 2rem;
+        padding: 1rem;
+        width: 33%;
+        text-align: center;
+        border-radius: 10px;
+
+        @media @mobile {
+          width: 100%;
+          padding: 2rem;
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+      
+      @media @mobile {
+        width: 100%;
+        margin: 0;
+      }
       
       img {
         width: 100%;
