--- a/less/home-page.less
+++ b/less/home-page.less
@@ -78,18 +78,7 @@
       }
 
       .btn {
-        background-color: @btn-bg-color;
-        color: white;
-        font-size: 2rem;
-        padding: 1rem;
-        width: 33%;
-        text-align: center;
-        border-radius: 10px;
-
-        @media @mobile {
-          width: 100%;
-          padding: 2rem;
-        }
+        .button(white);
       }
     }
 
